# logc

./: .gitignore  CMakeLists.txt  README.md  build.sh  logc.c  logc.h
docs/: TODO.md
tests/: test.c  test.cpp
